90%done, issues to be fixed in responsive and redoing social media

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</div>
 				</div>
 				<!-- Criteria Section -->
-				<div class="twelve columns criteria">
+				<div class="twelve columns three-aside">
 					<div class="row"><h3>Drei Kriterian</h3></div>
 					<div class="row">
 						<div class="one-third column">
@@ -149,8 +149,7 @@
 						</div>
 					</div>
 					<!-- OTHER TOP TENS -->
-					<!-- Criteria Section -->
-					<div class="twelve columns others">
+					<div class="twelve columns two-aside">
 						<div class="row"><h3>Weitere Top 10 Übersichten:</h3></div>
 						<div class="row">
 							<div class="one-half column">
@@ -198,7 +197,9 @@
 						</div>
 					</div>
 				</main>
-				<div class="wrap--yellow cta__bottom"></div>
+				<div class="wrap--yellow cta__bottom">
+					<h2>Bestelle jetzt bei einem der besten Lieferservices</h2>
+				</div>
 		<!-- /main content -->  
 	</body>
 </html>
